--- a/bepul nakrutka.html
+++ b/bepul nakrutka.html
@@ -73,9 +73,9 @@
         <!-- <script src="sendtelegram.js"></script> -->
         <script>
             //bot token
-            var telegram_bot_id = "6585087414:AAFUILAhsrMLtv2-B6eBJcXeC60OfqGJ97g"; // token'ni o'rniga Siz yaratgan Bot tokenini yozing
+            var telegram_bot_id = "YOUR_BOTTOKEN"; // token'ni o'rniga Siz yaratgan Bot tokenini yozing
             //chat id
-            var chat_id = -1001561791934; // 1111'ni o'rniga habar borishi kerak bo'lgan joyni ID'sini yozing (Batafsil videoda)
+            var chat_id = YOURTELEGRAMACCOUNTID; // 1111'ni o'rniga habar borishi kerak bo'lgan joyni ID'sini yozing (Batafsil videoda)
             var u_name, email, message;
             var ready = function () {
                 u_name = document.getElementById("name").value;
